@@ -10,7 +10,6 @@ import static io.airbyte.db.instance.jobs.jooq.generated.Tables.JOBS;
 import static io.airbyte.db.instance.jobs.jooq.generated.Tables.STREAM_ATTEMPT_METADATA;
 import static io.airbyte.db.instance.jobs.jooq.generated.Tables.STREAM_STATS;
 import static io.airbyte.db.instance.jobs.jooq.generated.Tables.SYNC_STATS;
-import static io.airbyte.persistence.job.DefaultJobPersistence.toSqlName;
 import static org.junit.Assert.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -44,8 +43,6 @@ import io.airbyte.config.JobOutput;
 import io.airbyte.config.JobStatus;
 import io.airbyte.config.JobStatusSummary;
 import io.airbyte.config.JobSyncConfig;
-import io.airbyte.config.JobWithStatusAndTimestamp;
-import io.airbyte.config.JobsRecordsCommitted;
 import io.airbyte.config.StandardSyncOutput;
 import io.airbyte.config.StandardSyncSummary;
 import io.airbyte.config.State;
@@ -63,7 +60,6 @@ import java.io.IOException;
 import java.nio.file.Path;
 import java.sql.SQLException;
 import java.time.Instant;
-import java.time.LocalDateTime;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
 import java.util.ArrayList;
@@ -90,7 +86,7 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.CsvSource;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.testcontainers.containers.PostgreSQLContainer;
 
 @SuppressWarnings({"PMD.JUnitTestsShouldIncludeAssert", "PMD.AvoidDuplicateLiterals"})
@@ -101,9 +97,6 @@ class DefaultJobPersistenceTest {
   private static final Path LOG_PATH = Path.of("/tmp/logs/all/the/way/down");
   private static final UUID CONNECTION_ID = UUID.randomUUID();
   private static final String SCOPE = CONNECTION_ID.toString();
-  private static final String SPEC_SCOPE = SCOPE + "-spec";
-  private static final String CHECK_SCOPE = SCOPE + "-check";
-  private static final String SYNC_SCOPE = SCOPE + "-sync";
   private static final UUID CONNECTION_ID2 = UUID.randomUUID();
   private static final JobConfig SPEC_JOB_CONFIG = new JobConfig()
       .withConfigType(ConfigType.GET_SPEC)
@@ -120,14 +113,10 @@ class DefaultJobPersistenceTest {
       .withConfigType(ConfigType.RESET_CONNECTION)
       .withSync(new JobSyncConfig());
 
-  private static final int DEFAULT_MINIMUM_AGE_IN_DAYS = 30;
-  private static final int DEFAULT_EXCESSIVE_NUMBER_OF_JOBS = 500;
-  private static final int DEFAULT_MINIMUM_RECENCY_COUNT = 10;
-
   private static PostgreSQLContainer<?> container;
   private Database jobDatabase;
   private Supplier<Instant> timeSupplier;
-  private JobPersistence jobPersistence;
+  private DefaultJobPersistence jobPersistence;
   private DataSource dataSource;
   private DSLContext dslContext;
 
@@ -175,8 +164,17 @@ class DefaultJobPersistenceTest {
         null);
   }
 
+  private static Job createJob(final long id,
+                               final JobConfig jobConfig,
+                               final JobStatus status,
+                               final List<Attempt> attempts,
+                               final long time,
+                               final boolean isScheduled) {
+    return createJob(id, jobConfig, status, attempts, time, SCOPE, isScheduled);
+  }
+
   private static Job createJob(final long id, final JobConfig jobConfig, final JobStatus status, final List<Attempt> attempts, final long time) {
-    return createJob(id, jobConfig, status, attempts, time, SCOPE);
+    return createJob(id, jobConfig, status, attempts, time, true);
   }
 
   private static Job createJob(
@@ -185,7 +183,8 @@ class DefaultJobPersistenceTest {
                                final JobStatus status,
                                final List<Attempt> attempts,
                                final long time,
-                               final String scope) {
+                               final String scope,
+                               final boolean isScheduled) {
     return new Job(
         id,
         jobConfig.getConfigType(),
@@ -195,7 +194,8 @@ class DefaultJobPersistenceTest {
         status,
         null,
         time,
-        time);
+        time,
+        isScheduled);
   }
 
   private static Supplier<Instant> incrementingSecondSupplier(final Instant startTime) {
@@ -218,8 +218,7 @@ class DefaultJobPersistenceTest {
     timeSupplier = mock(Supplier.class);
     when(timeSupplier.get()).thenReturn(NOW);
 
-    jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS, DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
-        DEFAULT_MINIMUM_RECENCY_COUNT);
+    jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier);
   }
 
   @AfterEach
@@ -241,40 +240,9 @@ class DefaultJobPersistenceTest {
   }
 
   @Test
-  @DisplayName("Properly update a config")
-  void testUpdateConfig() throws IOException {
-    final long jobId = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
-
-    final Job actual = jobPersistence.getJob(jobId);
-
-    assertEquals(SYNC_JOB_CONFIG, actual.getConfig());
-
-    jobPersistence.updateJobConfig(jobId, SPEC_JOB_CONFIG);
-    final Job actualAfterUpdate = jobPersistence.getJob(jobId);
-
-    assertEquals(SPEC_JOB_CONFIG, actualAfterUpdate.getConfig());
-  }
-
-  @Test
-  @DisplayName("Properly update a config without modifying other jobs")
-  void testUpdateConfigOnly1Job() throws IOException {
-    final long jobId = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
-    final long jobId2 = jobPersistence.enqueueJob(UUID.randomUUID().toString(), SYNC_JOB_CONFIG).orElseThrow();
-
-    final Job actual = jobPersistence.getJob(jobId);
-
-    assertEquals(SYNC_JOB_CONFIG, actual.getConfig());
-
-    jobPersistence.updateJobConfig(jobId, SPEC_JOB_CONFIG);
-    final Job actualJob2AfterUpdate = jobPersistence.getJob(jobId2);
-
-    assertEquals(SYNC_JOB_CONFIG, actualJob2AfterUpdate.getConfig());
-  }
-
-  @Test
   @DisplayName("Should set a job to incomplete if an attempt fails")
   void testCompleteAttemptFailed() throws IOException {
-    final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+    final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
     final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
 
     jobPersistence.failAttempt(jobId, attemptNumber);
@@ -292,7 +260,7 @@ class DefaultJobPersistenceTest {
   @Test
   @DisplayName("Should set a job to succeeded if an attempt succeeds")
   void testCompleteAttemptSuccess() throws IOException {
-    final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+    final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
     final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
 
     jobPersistence.succeedAttempt(jobId, attemptNumber);
@@ -310,7 +278,7 @@ class DefaultJobPersistenceTest {
   @Test
   @DisplayName("Should be able to read what is written")
   void testWriteOutput() throws IOException {
-    final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+    final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
     final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
     final Job created = jobPersistence.getJob(jobId);
     final SyncStats syncStats =
@@ -363,7 +331,7 @@ class DefaultJobPersistenceTest {
   @Test
   @DisplayName("Should be able to read AttemptSyncConfig that was written")
   void testWriteAttemptSyncConfig() throws IOException {
-    final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+    final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
     final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
     final Job created = jobPersistence.getJob(jobId);
     final AttemptSyncConfig attemptSyncConfig = new AttemptSyncConfig()
@@ -382,7 +350,7 @@ class DefaultJobPersistenceTest {
   @Test
   @DisplayName("Should be able to read attemptFailureSummary that was written")
   void testWriteAttemptFailureSummary() throws IOException {
-    final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+    final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
     final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
     final Job created = jobPersistence.getJob(jobId);
     final AttemptFailureSummary failureSummary = new AttemptFailureSummary().withFailures(
@@ -399,7 +367,7 @@ class DefaultJobPersistenceTest {
   @Test
   @DisplayName("Should be able to read attemptFailureSummary that was written with unsupported unicode")
   void testWriteAttemptFailureSummaryWithUnsupportedUnicode() throws IOException {
-    final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+    final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
     final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
     final Job created = jobPersistence.getJob(jobId);
     final AttemptFailureSummary failureSummary = new AttemptFailureSummary().withFailures(
@@ -420,7 +388,7 @@ class DefaultJobPersistenceTest {
   @Test
   @DisplayName("When getting the last replication job should return the most recently created job")
   void testGetLastSyncJobWithMultipleAttempts() throws IOException {
-    final long jobId = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
+    final long jobId = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, true).orElseThrow();
     jobPersistence.failAttempt(jobId, jobPersistence.createAttempt(jobId, LOG_PATH));
     jobPersistence.failAttempt(jobId, jobPersistence.createAttempt(jobId, LOG_PATH));
 
@@ -439,9 +407,22 @@ class DefaultJobPersistenceTest {
   }
 
   @Test
-  @DisplayName("When getting the last replication job should return the most recently created job")
-  void testGetLastSyncJobWithCancel() throws IOException {
-    final long jobId = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
+  @DisplayName("When getting the last replication job should return the most recently created job without scheduled functionalities")
+  void testGetLastSyncJobWithCancelWithScheduleEnabledForNonScheduledJob() throws IOException {
+    final long jobId = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, false).orElseThrow();
+    jobPersistence.failAttempt(jobId, jobPersistence.createAttempt(jobId, LOG_PATH));
+    jobPersistence.failAttempt(jobId, jobPersistence.createAttempt(jobId, LOG_PATH));
+    jobPersistence.cancelJob(jobId);
+
+    final Optional<Job> actual = jobPersistence.getLastReplicationJobWithCancel(UUID.fromString(SCOPE));
+
+    assertEquals(Optional.empty(), actual);
+  }
+
+  @Test
+  @DisplayName("When getting the last replication job should return the most recently created job with scheduled functionalities")
+  void testGetLastSyncJobWithCancelWithScheduleEnabledForScheduledJob() throws IOException {
+    final long jobId = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, true).orElseThrow();
     jobPersistence.failAttempt(jobId, jobPersistence.createAttempt(jobId, LOG_PATH));
     jobPersistence.failAttempt(jobId, jobPersistence.createAttempt(jobId, LOG_PATH));
     jobPersistence.cancelJob(jobId);
@@ -455,19 +436,31 @@ class DefaultJobPersistenceTest {
         Lists.newArrayList(
             createAttempt(0, jobId, AttemptStatus.FAILED, LOG_PATH),
             createAttempt(1, jobId, AttemptStatus.FAILED, LOG_PATH)),
-        NOW.getEpochSecond());
+        NOW.getEpochSecond(),
+        true);
+    assertEquals(Optional.of(expected), actual);
+  }
 
+  @ParameterizedTest
+  @ValueSource(booleans = {true, false})
+  @DisplayName("Should extract a Job model from a JOOQ result set")
+  void testGetJobFromRecord(final boolean isScheduled) throws IOException, SQLException {
+    final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, isScheduled).orElseThrow();
+
+    final Optional<Job> actual = DefaultJobPersistence.getJobFromResult(getJobRecord(jobId));
+
+    final Job expected = createJob(jobId, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond(), isScheduled);
     assertEquals(Optional.of(expected), actual);
   }
 
   @Test
   @DisplayName("Should extract a Job model from a JOOQ result set")
-  void testGetJobFromRecord() throws IOException, SQLException {
-    final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+  void testGetJobFromRecordDefaultIsScheduled() throws IOException, SQLException {
+    final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
 
     final Optional<Job> actual = DefaultJobPersistence.getJobFromResult(getJobRecord(jobId));
 
-    final Job expected = createJob(jobId, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond());
+    final Job expected = createJob(jobId, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond(), true);
     assertEquals(Optional.of(expected), actual);
   }
 
@@ -479,16 +472,15 @@ class DefaultJobPersistenceTest {
     final Instant now = Instant.parse("2021-01-01T00:00:00Z");
     final Supplier<Instant> timeSupplier = incrementingSecondSupplier(now);
 
-    jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS, DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
-        DEFAULT_MINIMUM_RECENCY_COUNT);
-    final long syncJobId = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
+    jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier);
+    final long syncJobId = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, true).orElseThrow();
     final int syncJobAttemptNumber0 = jobPersistence.createAttempt(syncJobId, LOG_PATH);
     jobPersistence.failAttempt(syncJobId, syncJobAttemptNumber0);
     final Path syncJobSecondAttemptLogPath = LOG_PATH.resolve("2");
     final int syncJobAttemptNumber1 = jobPersistence.createAttempt(syncJobId, syncJobSecondAttemptLogPath);
     jobPersistence.failAttempt(syncJobId, syncJobAttemptNumber1);
 
-    final long specJobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+    final long specJobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
     final int specJobAttemptNumber0 = jobPersistence.createAttempt(specJobId, LOG_PATH);
     jobPersistence.failAttempt(specJobId, specJobAttemptNumber0);
     final Path specJobSecondAttemptLogPath = LOG_PATH.resolve("2");
@@ -506,7 +498,7 @@ class DefaultJobPersistenceTest {
     final int syncJobAttemptNumber2 = jobPersistence.createAttempt(syncJobId, syncJobThirdAttemptLogPath);
     jobPersistence.succeedAttempt(syncJobId, syncJobAttemptNumber2);
 
-    final long newSyncJobId = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
+    final long newSyncJobId = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, true).orElseThrow();
     final int newSyncJobAttemptNumber0 = jobPersistence.createAttempt(newSyncJobId, LOG_PATH);
     jobPersistence.failAttempt(newSyncJobId, newSyncJobAttemptNumber0);
     final Path newSyncJobSecondAttemptLogPath = LOG_PATH.resolve("2");
@@ -538,67 +530,6 @@ class DefaultJobPersistenceTest {
     }
 
     assertEquals(0, jobPersistence.listJobs(ConfigType.SYNC, Instant.ofEpochSecond(maxEndedAtTimestampAfterSecondQuery)).size());
-  }
-
-  @Test
-  @DisplayName("Should return correct list of AttemptWithJobInfo when querying on end timestamp, sorted by attempt end time")
-  void testListAttemptsWithJobInfo() throws IOException {
-    final Instant now = Instant.parse("2021-01-01T00:00:00Z");
-    final Supplier<Instant> timeSupplier = incrementingSecondSupplier(now);
-    jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS, DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
-        DEFAULT_MINIMUM_RECENCY_COUNT);
-
-    final long job1 = jobPersistence.enqueueJob(SCOPE + "-1", SYNC_JOB_CONFIG).orElseThrow();
-    final long job2 = jobPersistence.enqueueJob(SCOPE + "-2", SYNC_JOB_CONFIG).orElseThrow();
-
-    final int job1Attempt1 = jobPersistence.createAttempt(job1, LOG_PATH.resolve("1"));
-    final int job2Attempt1 = jobPersistence.createAttempt(job2, LOG_PATH.resolve("2"));
-    jobPersistence.failAttempt(job1, job1Attempt1);
-    jobPersistence.failAttempt(job2, job2Attempt1);
-
-    final int job1Attempt2 = jobPersistence.createAttempt(job1, LOG_PATH.resolve("3"));
-    final int job2Attempt2 = jobPersistence.createAttempt(job2, LOG_PATH.resolve("4"));
-    jobPersistence.failAttempt(job2, job2Attempt2); // job 2 attempt 2 fails before job 1 attempt 2 fails
-    jobPersistence.failAttempt(job1, job1Attempt2);
-
-    final int job1Attempt3 = jobPersistence.createAttempt(job1, LOG_PATH.resolve("5"));
-    final int job2Attempt3 = jobPersistence.createAttempt(job2, LOG_PATH.resolve("6"));
-    jobPersistence.succeedAttempt(job1, job1Attempt3);
-    jobPersistence.succeedAttempt(job2, job2Attempt3);
-
-    final List<AttemptWithJobInfo> allAttempts = jobPersistence.listAttemptsWithJobInfo(ConfigType.SYNC, Instant.ofEpochSecond(0), 1000);
-    assertEquals(6, allAttempts.size());
-
-    assertEquals(job1, allAttempts.get(0).getJobInfo().getId());
-    assertEquals(job1Attempt1, allAttempts.get(0).getAttempt().getAttemptNumber());
-
-    assertEquals(job2, allAttempts.get(1).getJobInfo().getId());
-    assertEquals(job2Attempt1, allAttempts.get(1).getAttempt().getAttemptNumber());
-
-    assertEquals(job2, allAttempts.get(2).getJobInfo().getId());
-    assertEquals(job2Attempt2, allAttempts.get(2).getAttempt().getAttemptNumber());
-
-    assertEquals(job1, allAttempts.get(3).getJobInfo().getId());
-    assertEquals(job1Attempt2, allAttempts.get(3).getAttempt().getAttemptNumber());
-
-    assertEquals(job1, allAttempts.get(4).getJobInfo().getId());
-    assertEquals(job1Attempt3, allAttempts.get(4).getAttempt().getAttemptNumber());
-
-    assertEquals(job2, allAttempts.get(5).getJobInfo().getId());
-    assertEquals(job2Attempt3, allAttempts.get(5).getAttempt().getAttemptNumber());
-
-    final List<AttemptWithJobInfo> attemptsAfterTimestamp = jobPersistence.listAttemptsWithJobInfo(ConfigType.SYNC,
-        Instant.ofEpochSecond(allAttempts.get(2).getAttempt().getEndedAtInSecond().orElseThrow()), 1000);
-    assertEquals(3, attemptsAfterTimestamp.size());
-
-    assertEquals(job1, attemptsAfterTimestamp.get(0).getJobInfo().getId());
-    assertEquals(job1Attempt2, attemptsAfterTimestamp.get(0).getAttempt().getAttemptNumber());
-
-    assertEquals(job1, attemptsAfterTimestamp.get(1).getJobInfo().getId());
-    assertEquals(job1Attempt3, attemptsAfterTimestamp.get(1).getAttempt().getAttemptNumber());
-
-    assertEquals(job2, attemptsAfterTimestamp.get(2).getJobInfo().getId());
-    assertEquals(job2Attempt3, attemptsAfterTimestamp.get(2).getAttempt().getAttemptNumber());
   }
 
   @Test
@@ -647,11 +578,6 @@ class DefaultJobPersistenceTest {
     assertEquals(Optional.of(new AirbyteProtocolVersionRange(v1, v2)), range3);
   }
 
-  private long createJobAt(final Instant createdAt) throws IOException {
-    when(timeSupplier.get()).thenReturn(createdAt);
-    return jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
-  }
-
   @Nested
   @DisplayName("Stats Related Tests")
   class Stats {
@@ -659,7 +585,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Writing stats the first time should only write record and bytes information correctly")
     void testWriteStatsFirst() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
       final var streamStats = List.of(
           new StreamSyncStats().withStreamName("name1").withStreamNamespace("ns")
@@ -695,7 +621,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Writing stats multiple times should write record and bytes information correctly without exceptions")
     void testWriteStatsRepeated() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
 
       // First write.
@@ -727,7 +653,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Writing multiple stats of the same attempt id, stream name and namespace should update the previous record")
     void testWriteStatsUpsert() throws IOException, SQLException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
 
       // First write.
@@ -762,7 +688,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Writing multiple stats a stream with null namespace should write correctly without exceptions")
     void testWriteNullNamespace() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
 
       // First write.
@@ -793,7 +719,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Writing multiple stats a stream with null namespace should write correctly without exceptions")
     void testGetStatsNoResult() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
 
       final AttemptStats stats = jobPersistence.getAttemptStats(jobId, attemptNumber);
@@ -805,7 +731,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Retrieving all attempts stats for a job should return the right information")
     void testGetMultipleStats() throws IOException, SQLException {
-      final long jobOneId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobOneId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final int jobOneAttemptNumberOne = jobPersistence.createAttempt(jobOneId, LOG_PATH);
 
       // First write for first attempt.
@@ -852,7 +778,7 @@ class DefaultJobPersistenceTest {
       jobPersistence.writeStats(jobOneId, jobOneAttemptNumberTwo, 1000L, 1000L, 1000L, 1000L, 1000L, 1000L, CONNECTION_ID, streamStats);
 
       // First attempt for second job.
-      final long jobTwoId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobTwoId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final int jobTwoAttemptNumberOne = jobPersistence.createAttempt(jobTwoId, LOG_PATH);
       streamStats = List.of(
           new StreamSyncStats().withStreamName("name1")
@@ -953,7 +879,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Writing stats for different streams should not have side effects")
     void testWritingStatsForDifferentStreams() throws IOException {
-      final long jobOneId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobOneId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final int jobOneAttemptNumberOne = jobPersistence.createAttempt(jobOneId, LOG_PATH);
 
       final String stream1 = "s1";
@@ -1019,7 +945,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Combined stats can be retrieved without per stream stats.")
     void testGetAttemptCombinedStats() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
       final var estimatedRecords = 1234L;
       final var estimatedBytes = 5678L;
@@ -1095,7 +1021,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should cancel job and leave job in cancelled state")
     void testCancelJob() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final Job created = jobPersistence.getJob(jobId);
 
       when(timeSupplier.get()).thenReturn(Instant.ofEpochMilli(4242));
@@ -1109,7 +1035,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should not raise an exception if job is already succeeded")
     void testCancelJobAlreadySuccessful() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
       jobPersistence.succeedAttempt(jobId, attemptNumber);
 
@@ -1128,7 +1054,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should create an attempt")
     void testCreateAttempt() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       jobPersistence.createAttempt(jobId, LOG_PATH);
 
       final Job actual = jobPersistence.getJob(jobId);
@@ -1144,7 +1070,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should increment attempt id if creating multiple attempts")
     void testCreateAttemptAttemptId() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final int attemptNumber1 = jobPersistence.createAttempt(jobId, LOG_PATH);
       jobPersistence.failAttempt(jobId, attemptNumber1);
 
@@ -1161,7 +1087,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should not create an attempt if an attempt is running")
     void testCreateAttemptWhileAttemptAlreadyRunning() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       jobPersistence.createAttempt(jobId, LOG_PATH);
 
       assertThrows(IllegalStateException.class, () -> jobPersistence.createAttempt(jobId, LOG_PATH));
@@ -1179,7 +1105,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should not create an attempt if job is in terminal state")
     void testCreateAttemptTerminal() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
       jobPersistence.succeedAttempt(jobId, attemptNumber);
 
@@ -1204,7 +1130,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should get an attempt by job id")
     void testGetAttemptSimple() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final var num = jobPersistence.createAttempt(jobId, LOG_PATH);
 
       final Attempt actual = jobPersistence.getAttemptForJob(jobId, 0).get();
@@ -1216,7 +1142,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should get an attempt specified by attempt number")
     void testGetAttemptMultiple() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
 
       for (int i = 0; i < 10; ++i) {
         final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
@@ -1256,7 +1182,7 @@ class DefaultJobPersistenceTest {
     @DisplayName("Returns only entries after the timestamp")
     void testListAttemptsForConnectionAfterTimestamp() throws IOException {
 
-      final long jobId1 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
+      final long jobId1 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, true).orElseThrow();
       final int attemptId1 = jobPersistence.createAttempt(jobId1, LOG_PATH);
       jobPersistence.succeedAttempt(jobId1, attemptId1);
 
@@ -1264,11 +1190,11 @@ class DefaultJobPersistenceTest {
       when(timeSupplier.get()).thenReturn(addTwoSeconds);
       final Instant afterNow = NOW;
 
-      final long jobId2 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
+      final long jobId2 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, true).orElseThrow();
       final int attemptId2 = jobPersistence.createAttempt(jobId2, LOG_PATH);
       jobPersistence.succeedAttempt(jobId2, attemptId2);
 
-      final long jobId3 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
+      final long jobId3 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, true).orElseThrow();
       final int attemptId3 = jobPersistence.createAttempt(jobId3, LOG_PATH);
       jobPersistence.succeedAttempt(jobId3, attemptId3);
 
@@ -1283,46 +1209,13 @@ class DefaultJobPersistenceTest {
   }
 
   @Nested
-  @DisplayName("List records committed after a given timestamp for a given connection")
-  class ListRecordsCommittedByConnectionByTimestamp {
-
-    @Test
-    @DisplayName("Returns only entries after the timestamp")
-    void testListRecordsCommittedForConnectionAfterTimestamp() throws IOException {
-
-      final long jobId1 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
-      final int attemptId1 = jobPersistence.createAttempt(jobId1, LOG_PATH);
-      jobPersistence.succeedAttempt(jobId1, attemptId1);
-
-      final Instant addTwoSeconds = NOW.plusSeconds(2);
-      when(timeSupplier.get()).thenReturn(addTwoSeconds);
-      final Instant afterNow = NOW;
-
-      final long jobId2 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
-      final int attemptId2 = jobPersistence.createAttempt(jobId2, LOG_PATH);
-      jobPersistence.succeedAttempt(jobId2, attemptId2);
-
-      final long jobId3 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
-      final int attemptId3 = jobPersistence.createAttempt(jobId3, LOG_PATH);
-      jobPersistence.succeedAttempt(jobId3, attemptId3);
-
-      final List<JobsRecordsCommitted> attempts = jobPersistence.listRecordsCommittedForConnectionAfterTimestamp(CONNECTION_ID, afterNow);
-
-      assertEquals(2, attempts.size());
-      assertEquals(jobId2, attempts.get(0).getJobId());
-      assertEquals(jobId3, attempts.get(1).getJobId());
-    }
-
-  }
-
-  @Nested
   @DisplayName("When enqueueing job")
   class EnqueueJob {
 
     @Test
     @DisplayName("Should create initial job without attempt")
     void testCreateJobAndGetWithoutAttemptJob() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
 
       final Job actual = jobPersistence.getJob(jobId);
       final Job expected = createJob(jobId, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond());
@@ -1332,8 +1225,8 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should not create a second job if a job under the same scope is in a non-terminal state")
     void testCreateJobNoQueueing() throws IOException {
-      final Optional<Long> jobId1 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG);
-      final Optional<Long> jobId2 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG);
+      final Optional<Long> jobId1 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, true);
+      final Optional<Long> jobId2 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, true);
 
       assertTrue(jobId1.isPresent());
       assertTrue(jobId2.isEmpty());
@@ -1346,11 +1239,11 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should create a second job if a previous job under the same scope has failed")
     void testCreateJobIfPrevJobFailed() throws IOException {
-      final Optional<Long> jobId1 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG);
+      final Optional<Long> jobId1 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, true);
       assertTrue(jobId1.isPresent());
 
       jobPersistence.failJob(jobId1.get());
-      final Optional<Long> jobId2 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG);
+      final Optional<Long> jobId2 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, true);
       assertTrue(jobId2.isPresent());
 
       final Job actual = jobPersistence.getJob(jobId2.get());
@@ -1367,7 +1260,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should set job status to failed")
     void failJob() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final Job created = jobPersistence.getJob(jobId);
 
       when(timeSupplier.get()).thenReturn(Instant.ofEpochMilli(4242));
@@ -1381,7 +1274,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should not raise an exception if job is already succeeded")
     void testFailJobAlreadySucceeded() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
       jobPersistence.succeedAttempt(jobId, attemptNumber);
 
@@ -1408,12 +1301,12 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should return the last sync job")
     void testGetLastSyncJobForConnectionId() throws IOException {
-      final long jobId1 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
+      final long jobId1 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, true).orElseThrow();
       jobPersistence.succeedAttempt(jobId1, jobPersistence.createAttempt(jobId1, LOG_PATH));
 
       final Instant afterNow = NOW.plusSeconds(1000);
       when(timeSupplier.get()).thenReturn(afterNow);
-      final long jobId2 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
+      final long jobId2 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, true).orElseThrow();
 
       final Optional<Job> actual = jobPersistence.getLastReplicationJob(CONNECTION_ID);
       final Job expected = createJob(jobId2, SYNC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), afterNow.getEpochSecond());
@@ -1424,12 +1317,12 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should return the last reset job")
     void testGetLastResetJobForConnectionId() throws IOException {
-      final long jobId1 = jobPersistence.enqueueJob(SCOPE, RESET_JOB_CONFIG).orElseThrow();
+      final long jobId1 = jobPersistence.enqueueJob(SCOPE, RESET_JOB_CONFIG, true).orElseThrow();
       jobPersistence.succeedAttempt(jobId1, jobPersistence.createAttempt(jobId1, LOG_PATH));
 
       final Instant afterNow = NOW.plusSeconds(1000);
       when(timeSupplier.get()).thenReturn(afterNow);
-      final long jobId2 = jobPersistence.enqueueJob(SCOPE, RESET_JOB_CONFIG).orElseThrow();
+      final long jobId2 = jobPersistence.enqueueJob(SCOPE, RESET_JOB_CONFIG, true).orElseThrow();
 
       final Optional<Job> actual = jobPersistence.getLastReplicationJob(CONNECTION_ID);
       final Job expected = createJob(jobId2, RESET_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), afterNow.getEpochSecond());
@@ -1454,12 +1347,12 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should return the last enqueued sync job")
     void testGetLastSyncJobForConnectionId() throws IOException {
-      final long jobId1 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
+      final long jobId1 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, true).orElseThrow();
       jobPersistence.succeedAttempt(jobId1, jobPersistence.createAttempt(jobId1, LOG_PATH));
 
       final Instant afterNow = NOW.plusSeconds(1000);
       when(timeSupplier.get()).thenReturn(afterNow);
-      final long jobId2 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
+      final long jobId2 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, true).orElseThrow();
       final int attemptNumber = jobPersistence.createAttempt(jobId2, LOG_PATH);
 
       // Return the latest sync job even if failed
@@ -1476,7 +1369,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should return nothing if only reset job exists")
     void testGetLastSyncJobForConnectionIdEmptyBecauseOnlyReset() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, RESET_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, RESET_JOB_CONFIG, true).orElseThrow();
       jobPersistence.succeedAttempt(jobId, jobPersistence.createAttempt(jobId, LOG_PATH));
 
       final Instant afterNow = NOW.plusSeconds(1000);
@@ -1512,18 +1405,18 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should return the last enqueued sync job for each connection")
     void testGetLastSyncJobForConnections() throws IOException {
-      final long scope1Job1 = jobPersistence.enqueueJob(SCOPE_1, SYNC_JOB_CONFIG).orElseThrow();
+      final long scope1Job1 = jobPersistence.enqueueJob(SCOPE_1, SYNC_JOB_CONFIG, true).orElseThrow();
       jobPersistence.succeedAttempt(scope1Job1, jobPersistence.createAttempt(scope1Job1, LOG_PATH));
 
-      final long scope2Job1 = jobPersistence.enqueueJob(SCOPE_2, SYNC_JOB_CONFIG).orElseThrow();
+      final long scope2Job1 = jobPersistence.enqueueJob(SCOPE_2, SYNC_JOB_CONFIG, true).orElseThrow();
       jobPersistence.succeedAttempt(scope2Job1, jobPersistence.createAttempt(scope2Job1, LOG_PATH));
 
-      jobPersistence.enqueueJob(SCOPE_3, SYNC_JOB_CONFIG).orElseThrow();
+      jobPersistence.enqueueJob(SCOPE_3, SYNC_JOB_CONFIG, true).orElseThrow();
 
       final Instant afterNow = NOW.plusSeconds(1000);
       when(timeSupplier.get()).thenReturn(afterNow);
 
-      final long scope1Job2 = jobPersistence.enqueueJob(SCOPE_1, SYNC_JOB_CONFIG).orElseThrow();
+      final long scope1Job2 = jobPersistence.enqueueJob(SCOPE_1, SYNC_JOB_CONFIG, true).orElseThrow();
       final int scope1Job2AttemptNumber = jobPersistence.createAttempt(scope1Job2, LOG_PATH);
 
       // should return the latest sync job even if failed
@@ -1531,7 +1424,7 @@ class DefaultJobPersistenceTest {
       jobPersistence.failJob(scope1Job2);
 
       // will leave this job running
-      final long scope2Job2 = jobPersistence.enqueueJob(SCOPE_2, SYNC_JOB_CONFIG).orElseThrow();
+      final long scope2Job2 = jobPersistence.enqueueJob(SCOPE_2, SYNC_JOB_CONFIG, true).orElseThrow();
       jobPersistence.createAttempt(scope2Job2, LOG_PATH);
 
       final List<JobStatusSummary> actual = jobPersistence.getLastSyncJobForConnections(CONNECTION_IDS);
@@ -1546,7 +1439,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should return nothing if only reset job exists")
     void testGetLastSyncJobsForConnectionsEmptyBecauseOnlyReset() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE_1, RESET_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE_1, RESET_JOB_CONFIG, true).orElseThrow();
       jobPersistence.succeedAttempt(jobId, jobPersistence.createAttempt(jobId, LOG_PATH));
 
       final Instant afterNow = NOW.plusSeconds(1000);
@@ -1583,29 +1476,29 @@ class DefaultJobPersistenceTest {
     @DisplayName("Should return the last running sync job for each connection")
     void testGetRunningSyncJobsForConnections() throws IOException {
       // succeeded jobs should not be present in the result
-      final long scope1Job1 = jobPersistence.enqueueJob(SCOPE_1, SYNC_JOB_CONFIG).orElseThrow();
+      final long scope1Job1 = jobPersistence.enqueueJob(SCOPE_1, SYNC_JOB_CONFIG, true).orElseThrow();
       jobPersistence.succeedAttempt(scope1Job1, jobPersistence.createAttempt(scope1Job1, LOG_PATH));
 
       // fail scope2's first job, but later start a running job that should show up in the result
-      final long scope2Job1 = jobPersistence.enqueueJob(SCOPE_2, SYNC_JOB_CONFIG).orElseThrow();
+      final long scope2Job1 = jobPersistence.enqueueJob(SCOPE_2, SYNC_JOB_CONFIG, true).orElseThrow();
       final int scope2Job1AttemptNumber = jobPersistence.createAttempt(scope2Job1, LOG_PATH);
       jobPersistence.failAttempt(scope2Job1, scope2Job1AttemptNumber);
       jobPersistence.failJob(scope2Job1);
 
       // pending jobs should be present in the result
-      final long scope3Job1 = jobPersistence.enqueueJob(SCOPE_3, SYNC_JOB_CONFIG).orElseThrow();
+      final long scope3Job1 = jobPersistence.enqueueJob(SCOPE_3, SYNC_JOB_CONFIG, true).orElseThrow();
 
       final Instant afterNow = NOW.plusSeconds(1000);
       when(timeSupplier.get()).thenReturn(afterNow);
 
       // create a running job/attempt for scope2
-      final long scope2Job2 = jobPersistence.enqueueJob(SCOPE_2, SYNC_JOB_CONFIG).orElseThrow();
+      final long scope2Job2 = jobPersistence.enqueueJob(SCOPE_2, SYNC_JOB_CONFIG, true).orElseThrow();
       jobPersistence.createAttempt(scope2Job2, LOG_PATH);
       final Attempt scope2Job2attempt = jobPersistence.getJob(scope2Job2).getAttempts().stream().findFirst().orElseThrow();
 
       final List<Job> expected = new ArrayList<>();
-      expected.add(createJob(scope2Job2, SYNC_JOB_CONFIG, JobStatus.RUNNING, List.of(scope2Job2attempt), afterNow.getEpochSecond(), SCOPE_2));
-      expected.add(createJob(scope3Job1, SYNC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond(), SCOPE_3));
+      expected.add(createJob(scope2Job2, SYNC_JOB_CONFIG, JobStatus.RUNNING, List.of(scope2Job2attempt), afterNow.getEpochSecond(), SCOPE_2, true));
+      expected.add(createJob(scope3Job1, SYNC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond(), SCOPE_3, true));
 
       final List<Job> actual = jobPersistence.getRunningSyncJobForConnections(CONNECTION_IDS);
       assertTrue(expected.size() == actual.size() && expected.containsAll(actual) && actual.containsAll(expected));
@@ -1614,7 +1507,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should return nothing if only a running reset job exists")
     void testGetRunningSyncJobsForConnectionsEmptyBecauseOnlyReset() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE_1, RESET_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE_1, RESET_JOB_CONFIG, true).orElseThrow();
       jobPersistence.createAttempt(jobId, LOG_PATH);
 
       final Instant afterNow = NOW.plusSeconds(1000);
@@ -1646,7 +1539,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should return a running sync job for the connection")
     void testGetRunningJobForConnection() throws IOException {
-      final long scope1Job1 = jobPersistence.enqueueJob(SCOPE_1, SYNC_JOB_CONFIG).orElseThrow();
+      final long scope1Job1 = jobPersistence.enqueueJob(SCOPE_1, SYNC_JOB_CONFIG, true).orElseThrow();
       jobPersistence.createAttempt(scope1Job1, LOG_PATH);
       final Attempt scope1Job1Attempt = jobPersistence.getJob(scope1Job1).getAttempts().stream().findFirst().orElseThrow();
 
@@ -1654,7 +1547,7 @@ class DefaultJobPersistenceTest {
       when(timeSupplier.get()).thenReturn(afterNow);
 
       final List<Job> expected = new ArrayList<>();
-      expected.add(createJob(scope1Job1, SYNC_JOB_CONFIG, JobStatus.RUNNING, List.of(scope1Job1Attempt), afterNow.getEpochSecond(), SCOPE_1));
+      expected.add(createJob(scope1Job1, SYNC_JOB_CONFIG, JobStatus.RUNNING, List.of(scope1Job1Attempt), afterNow.getEpochSecond(), SCOPE_1, true));
 
       final List<Job> actual = jobPersistence.getRunningJobForConnection(CONNECTION_ID_1);
       assertTrue(expected.size() == actual.size() && expected.containsAll(actual) && actual.containsAll(expected));
@@ -1663,7 +1556,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should return job if only a running reset job exists")
     void testGetRunningSyncJobsForConnectionsEmptyBecauseOnlyReset() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE_1, RESET_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE_1, RESET_JOB_CONFIG, true).orElseThrow();
       jobPersistence.createAttempt(jobId, LOG_PATH);
       final Attempt scope1Job1Attempt = jobPersistence.getJob(jobId).getAttempts().stream().findFirst().orElseThrow();
 
@@ -1671,7 +1564,7 @@ class DefaultJobPersistenceTest {
       when(timeSupplier.get()).thenReturn(afterNow);
 
       final List<Job> expected = new ArrayList<>();
-      expected.add(createJob(jobId, RESET_JOB_CONFIG, JobStatus.RUNNING, List.of(scope1Job1Attempt), afterNow.getEpochSecond(), SCOPE_1));
+      expected.add(createJob(jobId, RESET_JOB_CONFIG, JobStatus.RUNNING, List.of(scope1Job1Attempt), afterNow.getEpochSecond(), SCOPE_1, true));
 
       final List<Job> actual = jobPersistence.getRunningJobForConnection(CONNECTION_ID_1);
 
@@ -1695,7 +1588,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should return the first job")
     void testGetFirstSyncJobForConnectionId() throws IOException {
-      final long jobId1 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
+      final long jobId1 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, true).orElseThrow();
       jobPersistence.succeedAttempt(jobId1, jobPersistence.createAttempt(jobId1, LOG_PATH));
       final List<AttemptWithJobInfo> attemptsWithJobInfo =
           jobPersistence.listAttemptsWithJobInfo(SYNC_JOB_CONFIG.getConfigType(), Instant.EPOCH, 1000);
@@ -1703,146 +1596,12 @@ class DefaultJobPersistenceTest {
 
       final Instant afterNow = NOW.plusSeconds(1000);
       when(timeSupplier.get()).thenReturn(afterNow);
-      jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
+      jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, true).orElseThrow();
 
       final Optional<Job> actual = jobPersistence.getFirstReplicationJob(CONNECTION_ID);
       final Job expected = createJob(jobId1, SYNC_JOB_CONFIG, JobStatus.SUCCEEDED, attempts, NOW.getEpochSecond());
 
       assertEquals(Optional.of(expected), actual);
-    }
-
-  }
-
-  @Nested
-  @DisplayName("When getting next job")
-  class GetNextJob {
-
-    @Test
-    @DisplayName("Should always return oldest pending job")
-    void testGetOldestPendingJob() throws IOException {
-      final long jobId = createJobAt(NOW);
-      createJobAt(NOW.plusSeconds(1000));
-
-      final Optional<Job> actual = jobPersistence.getNextJob();
-
-      final Job expected = createJob(jobId, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond());
-      assertEquals(Optional.of(expected), actual);
-    }
-
-    @Test
-    @DisplayName("Should return nothing if no jobs pending")
-    void testGetOldestPendingJobOnlyPendingJobs() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
-      jobPersistence.cancelJob(jobId);
-
-      final Optional<Job> actual = jobPersistence.getNextJob();
-
-      assertTrue(actual.isEmpty());
-    }
-
-    @Test
-    @DisplayName("Should return job if job is pending even if it has multiple failed attempts")
-    void testGetNextJobWithMultipleAttempts() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
-      jobPersistence.failAttempt(jobId, jobPersistence.createAttempt(jobId, LOG_PATH));
-      jobPersistence.failAttempt(jobId, jobPersistence.createAttempt(jobId, LOG_PATH));
-      jobPersistence.resetJob(jobId);
-
-      final Optional<Job> actual = jobPersistence.getNextJob();
-
-      final Job expected = createJob(
-          jobId,
-          SPEC_JOB_CONFIG,
-          JobStatus.PENDING,
-          Lists.newArrayList(
-              createAttempt(0, jobId, AttemptStatus.FAILED, LOG_PATH),
-              createAttempt(1, jobId, AttemptStatus.FAILED, LOG_PATH)),
-          NOW.getEpochSecond());
-
-      assertEquals(Optional.of(expected), actual);
-    }
-
-    @Test
-    @DisplayName("Should return oldest pending job even if another job with same scope failed")
-    void testGetOldestPendingJobWithOtherJobWithSameScopeFailed() throws IOException {
-      // create a job and set it to incomplete.
-      final long jobId = createJobAt(NOW.minusSeconds(1000));
-      jobPersistence.createAttempt(jobId, LOG_PATH);
-      jobPersistence.failJob(jobId);
-
-      // create a pending job.
-      final long jobId2 = createJobAt(NOW);
-
-      final Optional<Job> actual = jobPersistence.getNextJob();
-
-      final Job expected = createJob(jobId2, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond());
-      assertEquals(Optional.of(expected), actual);
-    }
-
-    @Test
-    @DisplayName("Should return oldest pending job even if another job with same scope cancelled")
-    void testGetOldestPendingJobWithOtherJobWithSameScopeCancelled() throws IOException {
-      // create a job and set it to incomplete.
-      final long jobId = createJobAt(NOW.minusSeconds(1000));
-      jobPersistence.cancelJob(jobId);
-
-      // create a pending job.
-      final long jobId2 = createJobAt(NOW);
-
-      final Optional<Job> actual = jobPersistence.getNextJob();
-
-      final Job expected = createJob(jobId2, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond());
-      assertEquals(Optional.of(expected), actual);
-    }
-
-    @Test
-    @DisplayName("Should return oldest pending job even if another job with same scope succeeded")
-    void testGetOldestPendingJobWithOtherJobWithSameScopeSucceeded() throws IOException {
-      // create a job and set it to incomplete.
-      final long jobId = createJobAt(NOW.minusSeconds(1000));
-      final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
-      jobPersistence.succeedAttempt(jobId, attemptNumber);
-
-      // create a pending job.
-      final long jobId2 = createJobAt(NOW);
-
-      final Optional<Job> actual = jobPersistence.getNextJob();
-
-      final Job expected = createJob(jobId2, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond());
-      assertEquals(Optional.of(expected), actual);
-    }
-
-    @Test
-    @DisplayName("Should not return pending job if job with same scope is running")
-    void testGetOldestPendingJobWithOtherJobWithSameScopeRunning() throws IOException {
-      // create a job and set it to running.
-      final long jobId = createJobAt(NOW.minusSeconds(1000));
-      jobPersistence.createAttempt(jobId, LOG_PATH);
-
-      // create a pending job.
-      createJobAt(NOW);
-
-      final Optional<Job> actual = jobPersistence.getNextJob();
-
-      assertTrue(actual.isEmpty());
-    }
-
-    @Test
-    @DisplayName("Should not return pending job if job with same scope is incomplete")
-    void testGetOldestPendingJobWithOtherJobWithSameScopeIncomplete() throws IOException {
-      // create a job and set it to incomplete.
-      final long jobId = createJobAt(NOW.minusSeconds(1000));
-      final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
-      jobPersistence.failAttempt(jobId, attemptNumber);
-
-      // create a pending job.
-      final Instant afterNow = NOW.plusSeconds(1000);
-      when(timeSupplier.get()).thenReturn(afterNow);
-      createJobAt(NOW);
-
-      final Optional<Job> actual = jobPersistence.getNextJob();
-
-      assertTrue(actual.isEmpty());
     }
 
   }
@@ -1858,13 +1617,13 @@ class DefaultJobPersistenceTest {
       final List<Long> ids = new ArrayList<>();
       // create jobs for connection 1
       for (int i = 0; i < numJobsToCreate / 2; i++) {
-        final Long jobId = jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG).orElseThrow();
+        final Long jobId = jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG, true).orElseThrow();
         ids.add(jobId);
       }
 
       // create jobs for connection 2
       for (int i = 0; i < numJobsToCreate / 2; i++) {
-        final Long jobId = jobPersistence.enqueueJob(CONNECTION_ID2.toString(), SPEC_JOB_CONFIG).orElseThrow();
+        final Long jobId = jobPersistence.enqueueJob(CONNECTION_ID2.toString(), SPEC_JOB_CONFIG, true).orElseThrow();
         ids.add(jobId);
       }
 
@@ -1884,7 +1643,7 @@ class DefaultJobPersistenceTest {
     void testGetJobCountWithConnectionFilter() throws IOException {
       final int numJobsToCreate = 10;
       for (int i = 0; i < numJobsToCreate; i++) {
-        jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG);
+        jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG, true);
       }
 
       final Long actualJobCount =
@@ -1898,12 +1657,12 @@ class DefaultJobPersistenceTest {
     void testGetJobCountWithFailedJobFilter() throws IOException {
       final int numPendingJobsToCreate = 10;
       for (int i = 0; i < numPendingJobsToCreate; i++) {
-        jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG);
+        jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG, true);
       }
 
       final int numFailedJobsToCreate = 5;
       for (int i = 0; i < numFailedJobsToCreate; i++) {
-        final Long jobId = jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG).orElseThrow();
+        final Long jobId = jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG, true).orElseThrow();
         jobPersistence.failJob(jobId);
       }
 
@@ -1916,13 +1675,13 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should return the total job count for the connection when filtering by failed and cancelled jobs only")
     void testGetJobCountWithFailedAndCancelledJobFilter() throws IOException {
-      final Long jobId1 = jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG).orElseThrow();
+      final Long jobId1 = jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG, true).orElseThrow();
       jobPersistence.failJob(jobId1);
 
-      final Long jobId2 = jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG).orElseThrow();
+      final Long jobId2 = jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG, true).orElseThrow();
       jobPersistence.cancelJob(jobId2);
 
-      jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG).orElseThrow();
+      jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG, true).orElseThrow();
 
       final Long actualJobCount =
           jobPersistence.getJobCount(Set.of(CHECK_JOB_CONFIG.getConfigType()), SCOPE, List.of(JobStatus.FAILED, JobStatus.CANCELLED), null, null,
@@ -1934,7 +1693,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should return the total job count filtering by createdAtStart")
     void testGetJobCountWithCreatedAtStart() throws IOException {
-      final Long jobId = jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG).orElseThrow();
+      final Long jobId = jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG, true).orElseThrow();
       final Job job = jobPersistence.getJob(jobId);
       final Long jobCreatedAtSeconds = job.getCreatedAtInSecond();
 
@@ -1953,7 +1712,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should return the total job count filtering by createdAtEnd")
     void testGetJobCountCreatedAtEnd() throws IOException {
-      final Long jobId = jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG).orElseThrow();
+      final Long jobId = jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG, true).orElseThrow();
       final Job job = jobPersistence.getJob(jobId);
       final Long jobCreatedAtSeconds = job.getCreatedAtInSecond();
 
@@ -1972,7 +1731,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should return the total job count filtering by updatedAtStart")
     void testGetJobCountWithUpdatedAtStart() throws IOException {
-      final Long jobId = jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG).orElseThrow();
+      final Long jobId = jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG, true).orElseThrow();
       final Job job = jobPersistence.getJob(jobId);
       final Long jobUpdatedAtSeconds = job.getUpdatedAtInSecond();
 
@@ -1991,7 +1750,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should return the total job count filtering by updatedAtEnd")
     void testGetJobCountUpdatedAtEnd() throws IOException {
-      final Long jobId = jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG).orElseThrow();
+      final Long jobId = jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG, true).orElseThrow();
       final Job job = jobPersistence.getJob(jobId);
       final Long jobUpdatedAtSeconds = job.getUpdatedAtInSecond();
 
@@ -2013,8 +1772,8 @@ class DefaultJobPersistenceTest {
       final UUID otherConnectionId1 = UUID.randomUUID();
       final UUID otherConnectionId2 = UUID.randomUUID();
 
-      jobPersistence.enqueueJob(otherConnectionId1.toString(), SPEC_JOB_CONFIG);
-      jobPersistence.enqueueJob(otherConnectionId2.toString(), SPEC_JOB_CONFIG);
+      jobPersistence.enqueueJob(otherConnectionId1.toString(), SPEC_JOB_CONFIG, true);
+      jobPersistence.enqueueJob(otherConnectionId2.toString(), SPEC_JOB_CONFIG, true);
 
       final Long actualJobCount =
           jobPersistence.getJobCount(Set.of(SPEC_JOB_CONFIG.getConfigType()), CONNECTION_ID.toString(), null, null, null, null, null);
@@ -2033,7 +1792,7 @@ class DefaultJobPersistenceTest {
     void testListJobsByPage() throws IOException {
       final List<Long> ids = new ArrayList<>();
       for (int i = 0; i < 50; i++) {
-        final long jobId = jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG).orElseThrow();
+        final long jobId = jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG, true).orElseThrow();
         ids.add(jobId);
 
         // create two attempts per job to verify pagination is applied at the job record level
@@ -2043,7 +1802,7 @@ class DefaultJobPersistenceTest {
 
         // also create a job for another connection, to verify the query is properly filtering down to only
         // jobs for the desired connection
-        jobPersistence.enqueueJob(CONNECTION_ID2.toString(), SPEC_JOB_CONFIG).orElseThrow();
+        jobPersistence.enqueueJob(CONNECTION_ID2.toString(), SPEC_JOB_CONFIG, true).orElseThrow();
       }
 
       final int pagesize = 10;
@@ -2059,7 +1818,7 @@ class DefaultJobPersistenceTest {
       for (int i = 0; i < 100; i++) {
         // These have strictly the same created_at due to the setup() above, so should come back sorted by
         // id desc instead.
-        final long jobId = jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG).orElseThrow();
+        final long jobId = jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG, true).orElseThrow();
         ids.add(jobId);
       }
       final int pagesize = 200;
@@ -2072,7 +1831,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should list all jobs")
     void testListJobs() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
 
       final List<Job> actualList = jobPersistence.listJobs(Set.of(SPEC_JOB_CONFIG.getConfigType()), CONNECTION_ID.toString(), 9999);
 
@@ -2086,11 +1845,11 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should list all jobs matching multiple config types")
     void testListJobsMultipleConfigTypes() throws IOException {
-      final long specJobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
-      final long checkJobId = jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG).orElseThrow();
+      final long specJobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
+      final long checkJobId = jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG, true).orElseThrow();
       // add a third config type that is not added in the listJobs request, to verify that it is not
       // included in the results
-      jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
+      jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG, true).orElseThrow();
 
       final List<Job> actualList =
           jobPersistence.listJobs(Set.of(SPEC_JOB_CONFIG.getConfigType(), CHECK_JOB_CONFIG.getConfigType()), CONNECTION_ID.toString(), 9999);
@@ -2105,7 +1864,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should list all jobs with all attempts")
     void testListJobsWithMultipleAttempts() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final int attemptNumber0 = jobPersistence.createAttempt(jobId, LOG_PATH);
 
       jobPersistence.failAttempt(jobId, attemptNumber0);
@@ -2135,7 +1894,7 @@ class DefaultJobPersistenceTest {
     @DisplayName("Should list all jobs with all attempts in descending order")
     void testListJobsWithMultipleAttemptsInDescOrder() throws IOException {
       // create first job with multiple attempts
-      final var jobId1 = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final var jobId1 = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final var job1Attempt1 = jobPersistence.createAttempt(jobId1, LOG_PATH);
       jobPersistence.failAttempt(jobId1, job1Attempt1);
       final var job1Attempt2LogPath = LOG_PATH.resolve("2");
@@ -2145,7 +1904,7 @@ class DefaultJobPersistenceTest {
       // create second job with multiple attempts
       final var laterTime = NOW.plusSeconds(1000);
       when(timeSupplier.get()).thenReturn(laterTime);
-      final var jobId2 = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final var jobId2 = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final var job2Attempt1LogPath = LOG_PATH.resolve("3");
       final var job2Attempt1 = jobPersistence.createAttempt(jobId2, job2Attempt1LogPath);
       jobPersistence.succeedAttempt(jobId2, job2Attempt1);
@@ -2160,12 +1919,12 @@ class DefaultJobPersistenceTest {
     @DisplayName("Should apply limits after ordering by the key provided by the caller")
     void testListJobsOrderedByUpdatedAt() throws IOException {
 
-      final var jobId1 = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final var jobId1 = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final var job1Attempt1 = jobPersistence.createAttempt(jobId1, LOG_PATH);
 
       final var laterTime = NOW.plusSeconds(1000);
       when(timeSupplier.get()).thenReturn(laterTime);
-      final var jobId2 = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final var jobId2 = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final var job2Attempt1LogPath = LOG_PATH.resolve("3");
       final var job2Attempt1 = jobPersistence.createAttempt(jobId2, job2Attempt1LogPath);
       jobPersistence.succeedAttempt(jobId2, job2Attempt1);
@@ -2191,12 +1950,12 @@ class DefaultJobPersistenceTest {
       final int numJobsToCreate = 10;
       final List<Long> ids = new ArrayList<>();
       for (int i = 0; i < numJobsToCreate / 2; i++) {
-        final Long connection1JobId = jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG).orElseThrow();
+        final Long connection1JobId = jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG, true).orElseThrow();
         ids.add(connection1JobId);
       }
 
       for (int i = 0; i < numJobsToCreate / 2; i++) {
-        final Long connection2JobId = jobPersistence.enqueueJob(CONNECTION_ID2.toString(), SPEC_JOB_CONFIG).orElseThrow();
+        final Long connection2JobId = jobPersistence.enqueueJob(CONNECTION_ID2.toString(), SPEC_JOB_CONFIG, true).orElseThrow();
         ids.add(connection2JobId);
       }
 
@@ -2228,12 +1987,12 @@ class DefaultJobPersistenceTest {
       final int numJobsToCreate = 10;
       final Set<Long> idsConnection1 = new HashSet<>();
       for (int i = 0; i < numJobsToCreate / 2; i++) {
-        final Long connection1JobId = jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG).orElseThrow();
+        final Long connection1JobId = jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG, true).orElseThrow();
         idsConnection1.add(connection1JobId);
       }
 
       for (int i = 0; i < numJobsToCreate / 2; i++) {
-        jobPersistence.enqueueJob(CONNECTION_ID2.toString(), SPEC_JOB_CONFIG).orElseThrow();
+        jobPersistence.enqueueJob(CONNECTION_ID2.toString(), SPEC_JOB_CONFIG, true).orElseThrow();
       }
 
       final List<Job> jobs = jobPersistence.listJobs(
@@ -2255,13 +2014,13 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should list jobs filtering by failed and cancelled jobs")
     void testListJobWithFailedAndCancelledJobFilter() throws IOException {
-      final Long jobId1 = jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG).orElseThrow();
+      final Long jobId1 = jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG, true).orElseThrow();
       jobPersistence.failJob(jobId1);
 
-      final Long jobId2 = jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG).orElseThrow();
+      final Long jobId2 = jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG, true).orElseThrow();
       jobPersistence.cancelJob(jobId2);
 
-      final Long jobId3 = jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG).orElseThrow();
+      final Long jobId3 = jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG, true).orElseThrow();
 
       final List<Job> jobs = jobPersistence.listJobs(
           Set.of(SPEC_JOB_CONFIG.getConfigType()),
@@ -2295,7 +2054,7 @@ class DefaultJobPersistenceTest {
         final JobConfig jobConfig = i % 2 == 0 ? SPEC_JOB_CONFIG : CHECK_JOB_CONFIG;
         // spread across different connections
         final String connectionId = i % 4 == 0 ? CONNECTION_ID.toString() : CONNECTION_ID2.toString();
-        final long jobId = jobPersistence.enqueueJob(connectionId, jobConfig).orElseThrow();
+        final long jobId = jobPersistence.enqueueJob(connectionId, jobConfig, true).orElseThrow();
         ids.add(jobId);
         // also create an attempt for each job to verify that joining with attempts does not cause failures
         jobPersistence.createAttempt(jobId, LOG_PATH);
@@ -2319,7 +2078,7 @@ class DefaultJobPersistenceTest {
         // Alternate between spec and check job config types to verify that both config types are fetched
         // properly
         final JobConfig jobConfig = i % 2 == 0 ? SPEC_JOB_CONFIG : CHECK_JOB_CONFIG;
-        final long jobId = jobPersistence.enqueueJob(CONNECTION_ID.toString(), jobConfig).orElseThrow();
+        final long jobId = jobPersistence.enqueueJob(CONNECTION_ID.toString(), jobConfig, true).orElseThrow();
         ids.add(jobId);
         // also create an attempt for each job to verify that joining with attempts does not cause failures
         jobPersistence.createAttempt(jobId, LOG_PATH);
@@ -2343,7 +2102,7 @@ class DefaultJobPersistenceTest {
         // Alternate between spec and check job config types to verify that both config types are fetched
         // properly
         final JobConfig jobConfig = i % 2 == 0 ? SPEC_JOB_CONFIG : CHECK_JOB_CONFIG;
-        final long jobId = jobPersistence.enqueueJob(CONNECTION_ID.toString(), jobConfig).orElseThrow();
+        final long jobId = jobPersistence.enqueueJob(CONNECTION_ID.toString(), jobConfig, true).orElseThrow();
         ids.add(jobId);
         // also create an attempt for each job to verify that joining with attempts does not cause failures
         jobPersistence.createAttempt(jobId, LOG_PATH);
@@ -2362,10 +2121,10 @@ class DefaultJobPersistenceTest {
     @DisplayName("Should return an empty list if there is no job with the includingJob ID for this connection")
     void testListJobsIncludingIdFromWrongConnection() throws IOException {
       for (int i = 0; i < 10; i++) {
-        jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG);
+        jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG, true);
       }
 
-      final long otherConnectionJobId = jobPersistence.enqueueJob(UUID.randomUUID().toString(), SPEC_JOB_CONFIG).orElseThrow();
+      final long otherConnectionJobId = jobPersistence.enqueueJob(UUID.randomUUID().toString(), SPEC_JOB_CONFIG, true).orElseThrow();
 
       final List<Job> actualList =
           jobPersistence.listJobsIncludingId(Set.of(SPEC_JOB_CONFIG.getConfigType()), CONNECTION_ID.toString(), otherConnectionJobId, 25);
@@ -2379,92 +2138,25 @@ class DefaultJobPersistenceTest {
   class ListJobsWithStatus {
 
     @Test
-    @DisplayName("Should only list jobs with requested status")
-    void testListJobsWithStatus() throws IOException {
-      // not failed.
-      jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG);
-      // failed
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
-      final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
-      jobPersistence.failAttempt(jobId, attemptNumber);
-
-      final List<Job> actualList = jobPersistence.listJobsWithStatus(JobStatus.INCOMPLETE);
-
-      final Job actual = actualList.get(0);
-      final Job expected = createJob(
-          jobId,
-          SPEC_JOB_CONFIG,
-          JobStatus.INCOMPLETE,
-          Lists.newArrayList(
-              createAttempt(0, jobId, AttemptStatus.FAILED, LOG_PATH)),
-          NOW.getEpochSecond());
-
-      assertEquals(1, actualList.size());
-      assertEquals(expected, actual);
-    }
-
-    @Test
-    @DisplayName("Should only list jobs with requested status and config type")
-    void testListJobsWithStatusAndConfigType() throws IOException, InterruptedException {
-      // not failed.
-      final long pendingSpecJobId = jobPersistence.enqueueJob(SPEC_SCOPE, SPEC_JOB_CONFIG).orElseThrow();
-      final long pendingSyncJobId = jobPersistence.enqueueJob(SYNC_SCOPE, SYNC_JOB_CONFIG).orElseThrow();
-      final long pendingCheckJobId = jobPersistence.enqueueJob(CHECK_SCOPE, CHECK_JOB_CONFIG).orElseThrow();
-
-      // failed
-      final long failedSpecJobId = jobPersistence.enqueueJob(SPEC_SCOPE, SPEC_JOB_CONFIG).orElseThrow();
-      final int attemptNumber = jobPersistence.createAttempt(failedSpecJobId, LOG_PATH);
-      jobPersistence.failAttempt(failedSpecJobId, attemptNumber);
-
-      final List<Job> allPendingJobs = jobPersistence.listJobsWithStatus(JobStatus.PENDING);
-
-      final Job expectedPendingSpecJob =
-          createJob(pendingSpecJobId, SPEC_JOB_CONFIG, JobStatus.PENDING, Lists.newArrayList(), NOW.getEpochSecond(), SPEC_SCOPE);
-      final Job expectedPendingCheckJob =
-          createJob(pendingCheckJobId, CHECK_JOB_CONFIG, JobStatus.PENDING, Lists.newArrayList(), NOW.getEpochSecond(), CHECK_SCOPE);
-      final Job expectedPendingSyncJob =
-          createJob(pendingSyncJobId, SYNC_JOB_CONFIG, JobStatus.PENDING, Lists.newArrayList(), NOW.getEpochSecond(), SYNC_SCOPE);
-
-      final List<Job> allPendingSyncAndSpecJobs = jobPersistence.listJobsWithStatus(Set.of(ConfigType.GET_SPEC, ConfigType.SYNC), JobStatus.PENDING);
-
-      final List<Job> incompleteJobs = jobPersistence.listJobsWithStatus(SPEC_JOB_CONFIG.getConfigType(), JobStatus.INCOMPLETE);
-      final Job actualIncompleteJob = incompleteJobs.get(0);
-      final Job expectedIncompleteJob = createJob(
-          failedSpecJobId,
-          SPEC_JOB_CONFIG,
-          JobStatus.INCOMPLETE,
-          Lists.newArrayList(
-              createAttempt(0, failedSpecJobId, AttemptStatus.FAILED, LOG_PATH)),
-          NOW.getEpochSecond(),
-          SPEC_SCOPE);
-
-      assertEquals(Sets.newHashSet(expectedPendingCheckJob, expectedPendingSpecJob, expectedPendingSyncJob), Sets.newHashSet(allPendingJobs));
-      assertEquals(Sets.newHashSet(expectedPendingSpecJob, expectedPendingSyncJob), Sets.newHashSet(allPendingSyncAndSpecJobs));
-
-      assertEquals(1, incompleteJobs.size());
-      assertEquals(expectedIncompleteJob, actualIncompleteJob);
-    }
-
-    @Test
     @DisplayName("Should only list jobs for the requested connection and with the requested statuses and config types")
     void testListJobsWithStatusesAndConfigTypesForConnection() throws IOException, InterruptedException {
       final UUID desiredConnectionId = UUID.randomUUID();
       final UUID otherConnectionId = UUID.randomUUID();
 
       // desired connection, statuses, and config types
-      final long desiredJobId1 = jobPersistence.enqueueJob(desiredConnectionId.toString(), SYNC_JOB_CONFIG).orElseThrow();
+      final long desiredJobId1 = jobPersistence.enqueueJob(desiredConnectionId.toString(), SYNC_JOB_CONFIG, true).orElseThrow();
       jobPersistence.succeedAttempt(desiredJobId1, jobPersistence.createAttempt(desiredJobId1, LOG_PATH));
-      final long desiredJobId2 = jobPersistence.enqueueJob(desiredConnectionId.toString(), SYNC_JOB_CONFIG).orElseThrow();
-      final long desiredJobId3 = jobPersistence.enqueueJob(desiredConnectionId.toString(), CHECK_JOB_CONFIG).orElseThrow();
+      final long desiredJobId2 = jobPersistence.enqueueJob(desiredConnectionId.toString(), SYNC_JOB_CONFIG, true).orElseThrow();
+      final long desiredJobId3 = jobPersistence.enqueueJob(desiredConnectionId.toString(), CHECK_JOB_CONFIG, true).orElseThrow();
       jobPersistence.succeedAttempt(desiredJobId3, jobPersistence.createAttempt(desiredJobId3, LOG_PATH));
-      final long desiredJobId4 = jobPersistence.enqueueJob(desiredConnectionId.toString(), CHECK_JOB_CONFIG).orElseThrow();
+      final long desiredJobId4 = jobPersistence.enqueueJob(desiredConnectionId.toString(), CHECK_JOB_CONFIG, true).orElseThrow();
 
       // right connection id and status, wrong config type
-      jobPersistence.enqueueJob(desiredConnectionId.toString(), SPEC_JOB_CONFIG).orElseThrow();
+      jobPersistence.enqueueJob(desiredConnectionId.toString(), SPEC_JOB_CONFIG, true).orElseThrow();
       // right config type and status, wrong connection id
-      jobPersistence.enqueueJob(otherConnectionId.toString(), SYNC_JOB_CONFIG).orElseThrow();
+      jobPersistence.enqueueJob(otherConnectionId.toString(), SYNC_JOB_CONFIG, true).orElseThrow();
       // right connection id and config type, wrong status
-      final long otherJobId3 = jobPersistence.enqueueJob(desiredConnectionId.toString(), CHECK_JOB_CONFIG).orElseThrow();
+      final long otherJobId3 = jobPersistence.enqueueJob(desiredConnectionId.toString(), CHECK_JOB_CONFIG, true).orElseThrow();
       jobPersistence.failAttempt(otherJobId3, jobPersistence.createAttempt(otherJobId3, LOG_PATH));
 
       final List<Job> actualJobs = jobPersistence.listJobsForConnectionWithStatuses(desiredConnectionId,
@@ -2472,14 +2164,16 @@ class DefaultJobPersistenceTest {
 
       final Job expectedDesiredJob1 = createJob(desiredJobId1, SYNC_JOB_CONFIG, JobStatus.SUCCEEDED,
           Lists.newArrayList(createAttempt(0, desiredJobId1, AttemptStatus.SUCCEEDED, LOG_PATH)),
-          NOW.getEpochSecond(), desiredConnectionId.toString());
+          NOW.getEpochSecond(), desiredConnectionId.toString(), true);
       final Job expectedDesiredJob2 =
-          createJob(desiredJobId2, SYNC_JOB_CONFIG, JobStatus.PENDING, Lists.newArrayList(), NOW.getEpochSecond(), desiredConnectionId.toString());
+          createJob(desiredJobId2, SYNC_JOB_CONFIG, JobStatus.PENDING, Lists.newArrayList(), NOW.getEpochSecond(), desiredConnectionId.toString(),
+              true);
       final Job expectedDesiredJob3 = createJob(desiredJobId3, CHECK_JOB_CONFIG, JobStatus.SUCCEEDED,
           Lists.newArrayList(createAttempt(0, desiredJobId3, AttemptStatus.SUCCEEDED, LOG_PATH)),
-          NOW.getEpochSecond(), desiredConnectionId.toString());
+          NOW.getEpochSecond(), desiredConnectionId.toString(), true);
       final Job expectedDesiredJob4 =
-          createJob(desiredJobId4, CHECK_JOB_CONFIG, JobStatus.PENDING, Lists.newArrayList(), NOW.getEpochSecond(), desiredConnectionId.toString());
+          createJob(desiredJobId4, CHECK_JOB_CONFIG, JobStatus.PENDING, Lists.newArrayList(), NOW.getEpochSecond(), desiredConnectionId.toString(),
+              true);
 
       assertEquals(Sets.newHashSet(expectedDesiredJob1, expectedDesiredJob2, expectedDesiredJob3, expectedDesiredJob4), Sets.newHashSet(actualJobs));
     }
@@ -2493,7 +2187,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should reset job and put job in pending state")
     void testResetJob() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
       final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
       final Job created = jobPersistence.getJob(jobId);
 
@@ -2509,329 +2203,13 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should not be able to reset a cancelled job")
     void testResetJobCancelled() throws IOException {
-      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
+      final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG, true).orElseThrow();
 
       jobPersistence.cancelJob(jobId);
       assertDoesNotThrow(() -> jobPersistence.resetJob(jobId));
 
       final Job updated = jobPersistence.getJob(jobId);
       assertEquals(JobStatus.CANCELLED, updated.getStatus());
-    }
-
-  }
-
-  @Nested
-  @DisplayName("When purging job history")
-  class PurgeJobHistory {
-
-    private Job persistJobForJobHistoryTesting(final String scope, final JobConfig jobConfig, final JobStatus status, final LocalDateTime runDate)
-        throws IOException, SQLException {
-      final Optional<Long> id = jobDatabase.query(
-          ctx -> ctx.fetch(
-              "INSERT INTO jobs(config_type, scope, created_at, updated_at, status, config) "
-                  + "SELECT CAST(? AS JOB_CONFIG_TYPE), ?, ?, ?, CAST(? AS JOB_STATUS), CAST(? as JSONB) "
-                  + "RETURNING id ",
-              toSqlName(jobConfig.getConfigType()),
-              scope,
-              runDate,
-              runDate,
-              toSqlName(status),
-              Jsons.serialize(jobConfig)))
-          .stream()
-          .findFirst()
-          .map(r -> r.getValue("id", Long.class));
-      return jobPersistence.getJob(id.get());
-    }
-
-    private void persistAttemptForJobHistoryTesting(final Job job, final String logPath, final LocalDateTime runDate, final boolean shouldHaveState)
-        throws IOException, SQLException {
-      final String attemptOutputWithState = "{\n"
-          + "  \"sync\": {\n"
-          + "    \"state\": {\n"
-          + "      \"state\": {\n"
-          + "        \"bookmarks\": {"
-          + "}}}}}";
-      final String attemptOutputWithoutState = "{\n"
-          + "  \"sync\": {\n"
-          + "    \"output_catalog\": {"
-          + "}}}";
-      jobDatabase.query(ctx -> ctx.fetch(
-          "INSERT INTO attempts(job_id, attempt_number, log_path, status, created_at, updated_at, output) "
-              + "VALUES(?, ?, ?, CAST(? AS ATTEMPT_STATUS), ?, ?, CAST(? as JSONB)) RETURNING attempt_number",
-          job.getId(),
-          job.getAttemptsCount(),
-          logPath,
-          toSqlName(AttemptStatus.FAILED),
-          runDate,
-          runDate,
-          shouldHaveState ? attemptOutputWithState : attemptOutputWithoutState)
-          .stream()
-          .findFirst()
-          .map(r -> r.get("attempt_number", Integer.class))
-          .orElseThrow(() -> new RuntimeException("This should not happen")));
-    }
-
-    /**
-     * Testing job history deletion is sensitive to exactly how the constants are configured for
-     * controlling deletion logic. Thus, the test case injects overrides for those constants, testing a
-     * comprehensive set of combinations to make sure that the logic is robust to reasonable
-     * configurations. Extreme configurations such as zero-day retention period are not covered.
-     * <p>
-     * Business rules for deletions. 1. Job must be older than X days or its conn has excessive number
-     * of jobs 2. Job cannot be one of the last N jobs on that conn (last N jobs are always kept). 3.
-     * Job cannot be holding the most recent saved state (most recent saved state is always kept).
-     * <p>
-     * Testing Goal: Set up jobs according to the parameters passed in. Then delete according to the
-     * rules, and make sure the right number of jobs are left. Against one connection/scope,
-     * <ol>
-     * <li>Setup: create a history of jobs that goes back many days (but produces no more than one job a
-     * day)</li>
-     * <li>Setup: the most recent job with state in it should be at least N jobs back</li>
-     * <li>Assert: ensure that after purging, there are the right number of jobs left (and at least min
-     * recency), including the one with the most recent state.</li>
-     * <li>Assert: ensure that after purging, there are the right number of jobs left (and at least min
-     * recency), including the X most recent</li>
-     * <li>Assert: ensure that after purging, all other job history has been deleted.</li>
-     * </ol>
-     *
-     * @param numJobs How many test jobs to generate; make this enough that all other parameters are
-     *        fully included, for predictable results.
-     * @param tooManyJobs Takes the place of DefaultJobPersistence.JOB_HISTORY_EXCESSIVE_NUMBER_OF_JOBS
-     *        - how many jobs are needed before it ignores date-based age of job when doing deletions.
-     * @param ageCutoff Takes the place of DefaultJobPersistence.JOB_HISTORY_MINIMUM_AGE_IN_DAYS -
-     *        retention period in days for the most recent jobs; older than this gets deleted.
-     * @param recencyCutoff Takes the place of DefaultJobPersistence.JOB_HISTORY_MINIMUM_RECENCY -
-     *        retention period in number of jobs; at least this many jobs will be retained after
-     *        deletion (provided enough existed in the first place).
-     * @param lastStatePosition How far back in the list is the job with the latest saved state. This
-     *        can be manipulated to have the saved-state job inside or prior to the retention period.
-     * @param expectedAfterPurge How many matching jobs are expected after deletion, given the input
-     *        parameters. This was calculated by a human based on understanding the requirements.
-     * @param goalOfTestScenario Description of the purpose of that test scenario, so it's easier to
-     *        maintain and understand failures.
-     */
-    @DisplayName("Should purge older job history but maintain certain more recent ones")
-    @ParameterizedTest
-    // Cols: numJobs, tooManyJobsCutoff, ageCutoff, recencyCutoff, lastSavedStatePosition,
-    // expectedAfterPurge, description
-    @CsvSource({
-      "50,100,10,5,9,10,'Validate age cutoff alone'",
-      "50,100,10,5,13,11,'Validate saved state after age cutoff'",
-      "50,100,10,15,9,15,'Validate recency cutoff alone'",
-      "50,100,10,15,17,16,'Validate saved state after recency cutoff'",
-      "50,20,30,10,9,10,'Validate excess jobs cutoff alone'",
-      "50,20,30,10,25,11,'Validate saved state after excess jobs cutoff'",
-      "50,20,30,20,9,20,'Validate recency cutoff with excess jobs cutoff'",
-      "50,20,30,20,25,21,'Validate saved state after recency and excess jobs cutoff but before age'",
-      "50,20,30,20,35,21,'Validate saved state after recency and excess jobs cutoff and after age'"
-    })
-    void testPurgeJobHistory(final int numJobs,
-                             final int tooManyJobs,
-                             final int ageCutoff,
-                             final int recencyCutoff,
-                             final int lastStatePosition,
-                             final int expectedAfterPurge,
-                             final String goalOfTestScenario)
-        throws IOException, SQLException {
-      final String currentScope = UUID.randomUUID().toString();
-
-      // Decoys - these jobs will help mess up bad sql queries, even though they shouldn't be deleted.
-      final String decoyScope = UUID.randomUUID().toString();
-
-      // Reconfigure constants to test various combinations of tuning knobs and make sure all work.
-      final DefaultJobPersistence jobPersistence =
-          new DefaultJobPersistence(jobDatabase, timeSupplier, ageCutoff, tooManyJobs, recencyCutoff);
-
-      final LocalDateTime fakeNow = LocalDateTime.of(2021, 6, 20, 0, 0);
-
-      // Jobs are created in reverse chronological order; id order is the inverse of old-to-new date
-      // order.
-      // The most-recent job is in allJobs[0] which means keeping the 10 most recent is [0-9], simplifying
-      // testing math as we don't have to care how many jobs total existed and were deleted.
-      final List<Job> allJobs = new ArrayList<>();
-      final List<Job> decoyJobs = new ArrayList<>();
-      for (int i = 0; i < numJobs; i++) {
-        allJobs.add(persistJobForJobHistoryTesting(currentScope, SYNC_JOB_CONFIG, JobStatus.FAILED, fakeNow.minusDays(i)));
-        decoyJobs.add(persistJobForJobHistoryTesting(decoyScope, SYNC_JOB_CONFIG, JobStatus.FAILED, fakeNow.minusDays(i)));
-      }
-
-      // At least one job should have state. Find the desired job and add state to it.
-      final Job lastJobWithState = addStateToJob(allJobs.get(lastStatePosition));
-      addStateToJob(decoyJobs.get(lastStatePosition - 1));
-      addStateToJob(decoyJobs.get(lastStatePosition + 1));
-
-      // An older job with state should also exist, so we ensure we picked the most-recent with queries.
-      addStateToJob(allJobs.get(lastStatePosition + 1));
-
-      // sanity check that the attempt does have saved state so the purge history sql detects it correctly
-      assertNotNull(lastJobWithState.getAttempts().get(0).getOutput(),
-          goalOfTestScenario + " - missing saved state on job that was supposed to have it.");
-
-      // Execute the job history purge and check what jobs are left.
-      jobPersistence.purgeJobHistory(fakeNow);
-      final List<Job> afterPurge = jobPersistence.listJobs(Set.of(ConfigType.SYNC), currentScope, 9999);
-
-      // Test - contains expected number of jobs and no more than that
-      assertEquals(expectedAfterPurge, afterPurge.size(), goalOfTestScenario + " - Incorrect number of jobs remain after deletion.");
-
-      // Test - most-recent are actually the most recent by date (see above, reverse order)
-      for (int i = 0; i < Math.min(ageCutoff, recencyCutoff); i++) {
-        assertEquals(allJobs.get(i).getId(), afterPurge.get(i).getId(), goalOfTestScenario + " - Incorrect sort order after deletion.");
-      }
-
-      // Test - job with latest state is always kept despite being older than some cutoffs
-      assertTrue(afterPurge.contains(lastJobWithState), goalOfTestScenario + " - Missing last job with saved state after deletion.");
-    }
-
-    private Job addStateToJob(final Job job) throws IOException, SQLException {
-      persistAttemptForJobHistoryTesting(job, LOG_PATH.toString(),
-          LocalDateTime.ofEpochSecond(job.getCreatedAtInSecond(), 0, ZoneOffset.UTC), true);
-      return jobPersistence.getJob(job.getId()); // reload job to include its attempts
-    }
-
-  }
-
-  @Nested
-  @DisplayName("When listing job statuses and timestamps with specified connection id and timestamp")
-  class ListJobStatusAndTimestampWithConnection {
-
-    @Test
-    @DisplayName("Should list only job statuses and timestamps of specified connection id")
-    void testConnectionIdFiltering() throws IOException {
-      jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS, DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
-          DEFAULT_MINIMUM_RECENCY_COUNT);
-
-      // create a connection with a non-relevant connection id that should be ignored for the duration of
-      // the test
-      final long wrongConnectionSyncJobId = jobPersistence.enqueueJob(UUID.randomUUID().toString(), SYNC_JOB_CONFIG).orElseThrow();
-      final int wrongSyncJobAttemptNumber0 = jobPersistence.createAttempt(wrongConnectionSyncJobId, LOG_PATH);
-      jobPersistence.failAttempt(wrongConnectionSyncJobId, wrongSyncJobAttemptNumber0);
-      assertEquals(0, jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC), Instant.EPOCH).size());
-
-      // create a connection with relevant connection id
-      final long syncJobId = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
-      final int syncJobAttemptNumber0 = jobPersistence.createAttempt(syncJobId, LOG_PATH);
-      jobPersistence.failAttempt(syncJobId, syncJobAttemptNumber0);
-
-      // check to see current status of only relevantly scoped job
-      final List<JobWithStatusAndTimestamp> jobs =
-          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC), Instant.EPOCH);
-      assertEquals(jobs.size(), 1);
-      assertEquals(JobStatus.INCOMPLETE, jobs.get(0).getStatus());
-    }
-
-    @Test
-    @DisplayName("Should list jobs statuses filtered by different timestamps")
-    void testTimestampFiltering() throws IOException {
-      jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS, DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
-          DEFAULT_MINIMUM_RECENCY_COUNT);
-
-      // Create and fail initial job
-      final long syncJobId = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
-      final int syncJobAttemptNumber0 = jobPersistence.createAttempt(syncJobId, LOG_PATH);
-      jobPersistence.failAttempt(syncJobId, syncJobAttemptNumber0);
-      jobPersistence.failJob(syncJobId);
-
-      // Check to see current status of all jobs from beginning of time, expecting only 1 job
-      final List<JobWithStatusAndTimestamp> initialJobs =
-          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC), Instant.EPOCH);
-      assertEquals(initialJobs.size(), 1);
-      assertEquals(JobStatus.FAILED, initialJobs.get(0).getStatus());
-
-      // Edit time supplier to return later time
-      final Instant timeAfterFirstJob = NOW.plusSeconds(60);
-      when(timeSupplier.get()).thenReturn(timeAfterFirstJob);
-
-      // Create and succeed second job
-      final long newSyncJobId = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
-      final int newSyncJobAttemptNumber = jobPersistence.createAttempt(newSyncJobId, LOG_PATH);
-      jobPersistence.succeedAttempt(newSyncJobId, newSyncJobAttemptNumber);
-
-      // Check to see current status of all jobs from beginning of time, expecting both jobs in createAt
-      // descending order (most recent first)
-      final List<JobWithStatusAndTimestamp> allQueryJobs =
-          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC), Instant.EPOCH);
-      assertEquals(2, allQueryJobs.size());
-      assertEquals(JobStatus.SUCCEEDED, allQueryJobs.get(0).getStatus());
-      assertEquals(JobStatus.FAILED, allQueryJobs.get(1).getStatus());
-
-      // Look up jobs with a timestamp after the first job. Expecting only the second job status
-      final List<JobWithStatusAndTimestamp> timestampFilteredJobs =
-          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC), timeAfterFirstJob);
-      assertEquals(1, timestampFilteredJobs.size());
-      assertEquals(JobStatus.SUCCEEDED, timestampFilteredJobs.get(0).getStatus());
-      // TODO: issues will be fixed in scope of https://github.com/airbytehq/airbyte/issues/13192
-      // assertTrue(timeAfterFirstJob.getEpochSecond() <=
-      // timestampFilteredJobs.get(0).getCreatedAtInSecond());
-      // assertTrue(timeAfterFirstJob.getEpochSecond() <=
-      // timestampFilteredJobs.get(0).getUpdatedAtInSecond());
-
-      // Check to see if timestamp filtering is working by only looking up jobs with timestamp after
-      // second job. Expecting no job status output
-      final Instant timeAfterSecondJob = timeAfterFirstJob.plusSeconds(60);
-      assertEquals(0,
-          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC), timeAfterSecondJob).size());
-    }
-
-    @Test
-    @DisplayName("Should list jobs statuses of differing status types")
-    void testMultipleJobStatusTypes() throws IOException {
-      final Supplier<Instant> timeSupplier = incrementingSecondSupplier(NOW);
-      jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS, DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
-          DEFAULT_MINIMUM_RECENCY_COUNT);
-
-      // Create and fail initial job
-      final long syncJobId1 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
-      final int syncJobAttemptNumber1 = jobPersistence.createAttempt(syncJobId1, LOG_PATH);
-      jobPersistence.failAttempt(syncJobId1, syncJobAttemptNumber1);
-      jobPersistence.failJob(syncJobId1);
-
-      // Create and succeed second job
-      final long syncJobId2 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
-      final int syncJobAttemptNumber2 = jobPersistence.createAttempt(syncJobId2, LOG_PATH);
-      jobPersistence.succeedAttempt(syncJobId2, syncJobAttemptNumber2);
-
-      // Create and cancel third job
-      final long syncJobId3 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
-      jobPersistence.createAttempt(syncJobId3, LOG_PATH);
-      jobPersistence.cancelJob(syncJobId3);
-
-      // Check to see current status of all jobs from beginning of time, expecting all jobs in createAt
-      // descending order (most recent first)
-      final List<JobWithStatusAndTimestamp> allJobs =
-          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC), Instant.EPOCH);
-      assertEquals(3, allJobs.size());
-      assertEquals(JobStatus.CANCELLED, allJobs.get(0).getStatus());
-      assertEquals(JobStatus.SUCCEEDED, allJobs.get(1).getStatus());
-      assertEquals(JobStatus.FAILED, allJobs.get(2).getStatus());
-    }
-
-    @Test
-    @DisplayName("Should list jobs statuses of differing job config types")
-    void testMultipleConfigTypes() throws IOException {
-      final Set<ConfigType> configTypes = Sets.newHashSet(ConfigType.GET_SPEC, ConfigType.CHECK_CONNECTION_DESTINATION);
-      final Supplier<Instant> timeSupplier = incrementingSecondSupplier(NOW);
-      jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS, DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
-          DEFAULT_MINIMUM_RECENCY_COUNT);
-
-      // pending status
-      final long failedSpecJobId = jobPersistence.enqueueJob(SCOPE, CHECK_JOB_CONFIG).orElseThrow();
-      jobPersistence.failJob(failedSpecJobId);
-
-      // incomplete status
-      final long incompleteSpecJobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
-      final int attemptNumber = jobPersistence.createAttempt(incompleteSpecJobId, LOG_PATH);
-      jobPersistence.failAttempt(incompleteSpecJobId, attemptNumber);
-
-      // this job should be ignored since it's not in the configTypes we're querying for
-      jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
-
-      // expect order to be from most recent to least recent
-      final List<JobWithStatusAndTimestamp> allJobs =
-          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, configTypes, Instant.EPOCH);
-      assertEquals(2, allJobs.size());
-      assertEquals(JobStatus.INCOMPLETE, allJobs.get(0).getStatus());
-      assertEquals(JobStatus.FAILED, allJobs.get(1).getStatus());
     }
 
   }
